langtools/test/tools/javac/cast/6219964/T6219964.out
T6219964.java:13:27: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: compiler.misc.anonymous.class: java.lang.Object, T6219964.I)
1 error
